Featured products vertical alignment issue fix

--- a/src/assets/styles/FeaturedProducts.css
+++ b/src/assets/styles/FeaturedProducts.css
@@ -27,12 +27,12 @@
 .featured-products .items .item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
 
   width: 100%;
-  height: 400px;
+  height: 500px;
 }
 .featured-products .items .item h4 {
   font-family: Play;
@@ -166,6 +166,10 @@
   }
   .featured-products .react-slideshow-container + ul.indicators span.active {
     background: #c4c4c4;
+  }
+
+  .featured-products .items .item {
+    height: 400px;
   }
 
   .featured-products .items .item .image img {
